[gd_scene load_steps=16 format=2]

[ext_resource path="res://World/Lobby/Lobby.gd" type="Script" id=1]
[ext_resource path="res://Objects/Camera/CameraOverview.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/Teleport/Teleport.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/Ball/Ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/Font/Roboto/Roboto.tres" type="DynamicFont" id=5]
[ext_resource path="res://World/Lobby/Town.tres" type="TileSet" id=6]
[ext_resource path="res://Minigames/Football/Football-Field.png" type="Texture" id=7]
[ext_resource path="res://UI/Font/Roboto/Roboto-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://UI/Font/Yoster/yoster.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://UI/Button.tres" type="StyleBox" id=10]
[ext_resource path="res://UI/Button hover.tres" type="StyleBox" id=11]
[ext_resource path="res://UI/Button pressed.tres" type="StyleBox" id=12]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 100
outline_size = 3
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 9 )

[node name="Lobby" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Water" type="ColorRect" parent="ParallaxBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.172549, 0.909804, 0.960784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CameraOverview" parent="." instance=ExtResource( 2 )]
position = Vector2( 1024, -1024 )
current = true
MAX_ZOOM = 2.5

[node name="BG" type="TileMap" parent="."]
scale = Vector2( 4, 4 )
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -851974, 10, 131073, -851973, 10, 131073, -851972, 10, 131073, -851971, 10, 131073, -917502, 10, 131073, -917501, 10, 131073, -917500, 10, 131073, -917499, 10, 131073, -786476, 9, 0, -786475, 9, 1, -786474, 9, 1, -786473, 9, 1, -786472, 9, 1, -786471, 9, 1, -786470, 9, 1, -786469, 9, 1, -786468, 9, 1, -786467, 9, 1, -786466, 9, 1, -786465, 9, 1, -786464, 9, 1, -786463, 9, 1, -786462, 9, 1, -786461, 9, 1, -786460, 9, 1, -786459, 9, 1, -786458, 9, 1, -786457, 9, 1, -786456, 9, 1, -786455, 9, 1, -786454, 9, 1, -786453, 9, 1, -786452, 9, 1, -786451, 9, 1, -786450, 9, 1, -786449, 9, 1, -786448, 9, 1, -786447, 9, 1, -786446, 9, 1, -786445, 9, 1, -786444, 9, 1, -786443, 9, 1, -786442, 9, 1, -786441, 9, 1, -786440, 9, 1, -786439, 9, 1, -786438, 9, 1, -786437, 9, 1, -786436, 9, 1, -786435, 9, 1, -786434, 9, 1, -786433, 9, 1, -851968, 9, 1, -851967, 9, 1, -851966, 9, 1, -851965, 9, 1, -851964, 9, 1, -851963, 9, 1, -851962, 9, 1, -851961, 9, 1, -851960, 9, 1, -851959, 9, 1, -851958, 9, 1, -851957, 9, 1, -851956, 9, 1, -851955, 9, 1, -851954, 9, 1, -851953, 9, 1, -851952, 9, 1, -851951, 9, 1, -851950, 9, 1, -851949, 9, 1, -851948, 9, 1, -851947, 9, 1, -851946, 9, 1, -851945, 9, 1, -851944, 9, 1, -851943, 9, 1, -851942, 9, 1, -851941, 9, 1, -851940, 9, 1, -851939, 9, 1, -851938, 9, 1, -851937, 9, 1, -851936, 9, 1, -851935, 9, 1, -851934, 9, 1, -851933, 9, 1, -851932, 9, 1, -851931, 9, 1, -851930, 9, 1, -851929, 9, 1, -851928, 9, 2, -720940, 9, 131072, -720939, 9, 131073, -720938, 9, 131073, -720937, 9, 131073, -720936, 9, 131073, -720935, 9, 131073, -720934, 9, 131073, -720933, 9, 131073, -720932, 9, 131073, -720931, 9, 131073, -720930, 9, 131073, -720929, 9, 131073, -720928, 9, 131073, -720927, 9, 131073, -720926, 9, 131073, -720925, 9, 131073, -720924, 9, 131073, -720923, 9, 131073, -720922, 9, 131073, -720921, 9, 131073, -720920, 9, 131073, -720919, 9, 131073, -720918, 9, 131073, -720917, 9, 131073, -720916, 9, 131073, -720915, 9, 131073, -720914, 9, 131073, -720913, 9, 131073, -720912, 9, 131073, -720911, 9, 131073, -720910, 9, 131073, -720909, 9, 131073, -720908, 9, 131073, -720907, 9, 131073, -720906, 9, 131073, -720905, 9, 131073, -720904, 9, 131073, -720903, 9, 131073, -720902, 9, 131073, -720901, 9, 131073, -720900, 9, 131073, -720899, 9, 131073, -720898, 9, 131073, -720897, 9, 131073, -786432, 9, 131073, -786431, 9, 131073, -786430, 9, 131073, -786429, 9, 131073, -786428, 9, 131073, -786427, 9, 131073, -786426, 9, 131073, -786425, 9, 131073, -786424, 9, 131073, -786423, 9, 131073, -786422, 9, 131073, -786421, 9, 131073, -786420, 9, 131073, -786419, 9, 131073, -786418, 9, 131073, -786417, 9, 131073, -786416, 9, 131073, -786415, 9, 131073, -786414, 9, 131073, -786413, 9, 131073, -786412, 9, 131073, -786411, 9, 131073, -786410, 9, 131073, -786409, 9, 131073, -786408, 9, 131073, -786407, 9, 131073, -786406, 9, 131073, -786405, 9, 131073, -786404, 9, 131073, -786403, 9, 131073, -786402, 9, 131073, -786401, 9, 131073, -786400, 9, 131073, -786399, 9, 131073, -786398, 9, 131073, -786397, 9, 131073, -786396, 9, 131073, -786395, 9, 131073, -786394, 9, 131073, -786393, 9, 131073, -786392, 9, 131074, -655367, 2, 0, -655366, 2, 0, -655365, 2, 0, -720892, 2, 0, -720891, 2, 0, -720890, 2, 0, -720889, 10, 0, -589831, 2, 0, -589830, 2, 0, -589829, 2, 0, -655356, 2, 0, -655355, 2, 0, -655354, 2, 0, -655353, 10, 0, -524295, 2, 0, -524294, 2, 0, -524293, 2, 0, -589820, 2, 0, -589819, 2, 0, -589818, 2, 0, -458759, 2, 0, -458758, 2, 0, -458757, 2, 0, -524284, 2, 0, -524283, 2, 0, -524282, 2, 0, -262150, 10, 131073, -262149, 10, 131073, -262148, 10, 131073, -327677, 10, 131073, -327676, 10, 131073, -327675, 10, 131073 )
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 4, 4 )
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -1179655, 9, 0, -1179654, 9, 1, -1179653, 9, 1, -1179652, 9, 1, -1179651, 9, 1, -1179650, 9, 1, -1179649, 9, 1, -1245184, 9, 1, -1245183, 9, 1, -1245182, 9, 1, -1245181, 9, 1, -1245180, 9, 1, -1245179, 9, 1, -1245178, 9, 2, -1114119, 9, 65536, -1114118, 9, 65537, -1114117, 9, 65537, -1114116, 9, 65537, -1114115, 9, 65537, -1114114, 9, 65537, -1114113, 9, 65537, -1179648, 9, 65537, -1179647, 9, 65537, -1179646, 9, 65537, -1179645, 9, 65537, -1179644, 9, 65537, -1179643, 9, 65537, -1179642, 9, 65538, -1048583, 9, 131072, -1048582, 9, 131073, -1048581, 9, 131073, -1048580, 9, 131073, -1048579, 9, 131073, -1048578, 9, 131073, -1048577, 9, 131073, -1114112, 9, 131073, -1114111, 9, 131073, -1114110, 9, 131073, -1114109, 9, 131073, -1114108, 9, 131073, -1114107, 9, 131073, -1114106, 9, 131074, -983047, 10, 0, -983046, 10, 1, -983045, 10, 1, -983044, 10, 1, -983043, 10, 1, -983042, 10, 1, -983041, 10, 1, -1048576, 10, 1, -1048575, 10, 1, -1048574, 10, 1, -1048573, 10, 1, -1048572, 10, 1, -1048571, 10, 1, -1048570, 10, 2, -917511, 10, 131072, -917510, 10, 131073, -917509, 10, 131073, -917508, 10, 131073, -917507, 10, 0, -917506, 10, 65537, -917505, 10, 65537, -983040, 10, 65537, -983039, 10, 65537, -983038, 10, 0, -983037, 10, 131073, -983036, 10, 131073, -983035, 10, 131073, -983034, 10, 131074, -851994, 3, 0, -851993, 3, 0, -851992, 3, 0, -851991, 3, 0, -851990, 3, 0, -851989, 3, 0, -851988, 3, 0, -851987, 3, 0, -851986, 3, 0, -851985, 3, 0, -851984, 3, 0, -851983, 3, 0, -851982, 3, 0, -851981, 3, 0, -851980, 3, 0, -851979, 3, 0, -851978, 3, 0, -851977, 3, 0, -851976, 3, 0, -851975, 10, 0, -851974, 7, 0, -851973, 7, 1, -851972, 7, 1, -851971, 7, 2, -851970, 10, 131073, -851969, 10, 131073, -917504, 10, 131073, -917503, 10, 131073, -917502, 7, 0, -917501, 7, 1, -917500, 7, 1, -917499, 7, 2, -917498, 10, 0, -917497, 3, 0, -917496, 3, 0, -917495, 3, 0, -786476, 11, 0, -786475, 11, 1, -786474, 11, 1, -786473, 11, 1, -786472, 11, 1, -786471, 11, 1, -786470, 11, 1, -786469, 11, 1, -786468, 11, 1, -786467, 11, 1, -786466, 11, 1, -786465, 11, 1, -786464, 11, 1, -786463, 11, 1, -786462, 11, 1, -786461, 11, 1, -786460, 11, 1, -786459, 11, 1, -786458, 11, 1, -786457, 11, 1, -786456, 11, 1, -786455, 11, 1, -786454, 11, 1, -786453, 11, 1, -786452, 11, 1, -786451, 11, 1, -786450, 11, 1, -786449, 11, 1, -786448, 11, 1, -786447, 11, 1, -786446, 11, 1, -786445, 11, 1, -786444, 11, 1, -786443, 11, 1, -786442, 11, 1, -786441, 11, 1, -786440, 11, 1, -786439, 11, 1, -786438, 11, 1, -786437, 11, 1, -786436, 11, 1, -786435, 11, 1, -786434, 11, 1, -786433, 11, 1, -851968, 11, 1, -851967, 11, 1, -851966, 11, 1, -851965, 11, 1, -851964, 11, 1, -851963, 11, 1, -851962, 11, 1, -851961, 11, 1, -851960, 11, 1, -851959, 11, 1, -851958, 11, 1, -851957, 11, 1, -851956, 11, 1, -851955, 11, 1, -851954, 11, 1, -851953, 11, 1, -851952, 11, 1, -851951, 11, 1, -851950, 11, 1, -851949, 11, 1, -851948, 11, 1, -851947, 11, 1, -851946, 11, 1, -851945, 11, 1, -851944, 11, 1, -851943, 11, 1, -851942, 11, 1, -851941, 11, 1, -851940, 11, 1, -851939, 11, 1, -851938, 11, 1, -851937, 11, 1, -851936, 11, 1, -851935, 11, 1, -851934, 11, 1, -851933, 11, 1, -851932, 11, 1, -851931, 11, 1, -851930, 11, 1, -851929, 11, 1, -851928, 11, 2, -720940, 11, 65536, -720939, 11, 65537, -720938, 11, 65537, -720937, 11, 65537, -720936, 11, 65537, -720935, 11, 65537, -720934, 11, 65537, -720933, 11, 65537, -720932, 11, 65537, -720931, 11, 65537, -720930, 11, 65537, -720929, 11, 65537, -720928, 11, 65537, -720927, 11, 65537, -720926, 11, 65537, -720925, 11, 65537, -720924, 11, 65537, -720923, 11, 65537, -720922, 11, 65537, -720921, 11, 65537, -720920, 11, 65537, -720919, 11, 65537, -720918, 11, 65537, -720917, 11, 65537, -720916, 11, 65537, -720915, 11, 65537, -720914, 11, 65537, -720913, 11, 65537, -720912, 11, 65537, -720911, 11, 65537, -720910, 11, 65537, -720909, 11, 65537, -720908, 11, 65537, -720907, 11, 65537, -720906, 11, 65537, -720905, 11, 65537, -720904, 11, 65537, -720903, 11, 65537, -720902, 11, 65537, -720901, 11, 65537, -720900, 11, 65537, -720899, 11, 65537, -720898, 11, 65537, -720897, 11, 65537, -786432, 11, 65537, -786431, 11, 65537, -786430, 11, 65537, -786429, 11, 65537, -786428, 11, 65537, -786427, 11, 65537, -786426, 11, 65537, -786425, 11, 65537, -786424, 11, 65537, -786423, 11, 65537, -786422, 11, 65537, -786421, 11, 65537, -786420, 11, 65537, -786419, 11, 65537, -786418, 11, 65537, -786417, 11, 65537, -786416, 11, 65537, -786415, 11, 65537, -786414, 11, 65537, -786413, 11, 65537, -786412, 11, 65537, -786411, 11, 65537, -786410, 11, 65537, -786409, 11, 65537, -786408, 11, 65537, -786407, 11, 65537, -786406, 11, 65537, -786405, 11, 65537, -786404, 11, 65537, -786403, 11, 65537, -786402, 11, 65537, -786401, 11, 65537, -786400, 11, 65537, -786399, 11, 65537, -786398, 11, 65537, -786397, 11, 65537, -786396, 11, 65537, -786395, 11, 65537, -786394, 11, 65537, -786393, 11, 65537, -786392, 11, 65538, -655404, 10, 0, -655403, 10, 1, -655402, 10, 1, -655401, 10, 1, -655400, 10, 1, -655399, 10, 1, -655398, 10, 1, -655397, 10, 1, -655396, 10, 1, -655395, 10, 1, -655394, 10, 1, -655393, 10, 1, -655392, 10, 1, -655391, 10, 1, -655390, 10, 1, -655389, 10, 1, -655388, 10, 1, -655387, 10, 1, -655386, 10, 1, -655385, 10, 1, -655384, 10, 1, -655383, 10, 1, -655382, 10, 1, -655381, 10, 1, -655380, 10, 1, -655379, 10, 1, -655378, 10, 1, -655377, 10, 1, -655376, 10, 1, -655375, 10, 1, -655374, 10, 1, -655373, 10, 1, -655372, 10, 1, -655371, 10, 1, -655370, 10, 1, -655369, 10, 1, -655368, 10, 2, -655367, 9, 0, -655366, 9, 1, -655365, 9, 2, -655364, 8, 0, -655363, 8, 1, -655362, 8, 1, -655361, 8, 1, -720896, 8, 1, -720895, 8, 1, -720894, 8, 1, -720893, 8, 2, -720892, 9, 0, -720891, 9, 1, -720890, 9, 2, -720889, 10, 0, -720888, 10, 1, -720887, 10, 1, -720886, 10, 1, -720885, 10, 1, -720884, 10, 1, -720883, 10, 1, -720882, 10, 1, -720881, 10, 1, -720880, 10, 1, -720879, 10, 1, -720878, 10, 1, -720877, 10, 1, -720876, 10, 1, -720875, 10, 1, -720874, 10, 1, -720873, 10, 1, -720872, 10, 1, -720871, 10, 1, -720870, 10, 1, -720869, 10, 1, -720868, 10, 1, -720867, 10, 1, -720866, 10, 1, -720865, 10, 1, -720864, 10, 1, -720863, 10, 1, -720862, 10, 1, -720861, 10, 1, -720860, 10, 1, -720859, 10, 1, -720858, 10, 1, -720857, 10, 1, -720856, 10, 2, -589868, 10, 131072, -589867, 10, 131073, -589866, 10, 131073, -589865, 10, 131073, -589864, 10, 131073, -589863, 10, 131073, -589862, 10, 131073, -589861, 10, 131073, -589860, 10, 131073, -589859, 10, 131073, -589858, 10, 131073, -589857, 10, 131073, -589856, 10, 131073, -589855, 10, 131073, -589854, 10, 131073, -589853, 10, 131073, -589852, 10, 131073, -589851, 10, 131073, -589850, 10, 131073, -589849, 10, 131073, -589848, 10, 131073, -589847, 10, 131073, -589846, 10, 131073, -589845, 10, 131073, -589844, 10, 131073, -589843, 10, 131073, -589842, 10, 131073, -589841, 10, 131073, -589840, 10, 131073, -589839, 10, 131073, -589838, 10, 131073, -589837, 10, 131073, -589836, 10, 131073, -589835, 10, 131073, -589834, 10, 131073, -589833, 10, 131073, -589832, 10, 131074, -589831, 9, 65536, -589830, 9, 65537, -589829, 9, 65538, -589828, 8, 65536, -589827, 8, 65537, -589826, 8, 65537, -589825, 8, 65537, -655360, 8, 65537, -655359, 8, 65537, -655358, 8, 65537, -655357, 8, 65538, -655356, 9, 65536, -655355, 9, 65537, -655354, 9, 65538, -655353, 10, 131072, -655352, 10, 131073, -655351, 10, 131073, -655350, 10, 131073, -655349, 10, 131073, -655348, 10, 131073, -655347, 10, 131073, -655346, 10, 131073, -655345, 10, 131073, -655344, 10, 131073, -655343, 10, 131073, -655342, 10, 131073, -655341, 10, 131073, -655340, 10, 131073, -655339, 10, 131073, -655338, 10, 131073, -655337, 10, 131073, -655336, 10, 131073, -655335, 10, 131073, -655334, 10, 131073, -655333, 10, 131073, -655332, 10, 131073, -655331, 10, 131073, -655330, 10, 131073, -655329, 10, 131073, -655328, 10, 131073, -655327, 10, 131073, -655326, 10, 131073, -655325, 10, 131073, -655324, 10, 131073, -655323, 10, 131073, -655322, 10, 131073, -655321, 10, 131073, -655320, 10, 131074, -524314, 3, 0, -524313, 3, 0, -524312, 3, 0, -524295, 9, 65536, -524294, 9, 65537, -524293, 9, 65538, -524292, 8, 65536, -524291, 8, 65537, -524290, 8, 65537, -524289, 8, 65537, -589824, 8, 65537, -589823, 8, 65537, -589822, 8, 65537, -589821, 8, 65538, -589820, 9, 65536, -589819, 9, 65537, -589818, 9, 65538, -589817, 3, 0, -589816, 3, 0, -589815, 3, 0, -458778, 3, 0, -458777, 3, 0, -458776, 3, 0, -458759, 9, 131072, -458758, 9, 131073, -458757, 9, 131074, -458756, 8, 131072, -458755, 8, 131073, -458754, 8, 131073, -458753, 8, 131073, -524288, 8, 131073, -524287, 8, 131073, -524286, 8, 131073, -524285, 8, 131074, -524284, 9, 131072, -524283, 9, 131073, -524282, 9, 131074, -524281, 3, 0, -524280, 3, 0, -524279, 3, 0, -393242, 3, 0, -393241, 3, 0, -393240, 3, 0, -393223, 10, 0, -393222, 10, 1, -393221, 10, 1, -393220, 10, 2, -393219, 6, 0, -393218, 6, 1, -393217, 6, 1, -458752, 6, 1, -458751, 6, 1, -458750, 6, 2, -458749, 10, 0, -458748, 10, 1, -458747, 10, 1, -458746, 10, 2, -458745, 3, 0, -458744, 3, 0, -458743, 3, 0, -327706, 3, 0, -327705, 3, 0, -327704, 3, 0, -327687, 10, 131072, -327686, 10, 131073, -327685, 10, 131073, -327684, 10, 131074, -327683, 6, 65536, -327682, 6, 65537, -327681, 6, 65537, -393216, 6, 65537, -393215, 6, 65537, -393214, 6, 65538, -393213, 10, 131072, -393212, 10, 131073, -393211, 10, 131073, -393210, 10, 131074, -393209, 3, 0, -393208, 3, 0, -393207, 3, 0, -393206, 3, 0, -393205, 3, 0, -393204, 3, 0, -393203, 3, 0, -393202, 3, 0, -393201, 3, 0, -262170, 3, 0, -262169, 3, 0, -262168, 3, 0, -262151, 10, 0, -262150, 7, 0, -262149, 7, 1, -262148, 7, 2, -262147, 6, 131072, -262146, 6, 131073, -262145, 6, 131073, -327680, 6, 131073, -327679, 6, 131073, -327678, 6, 131074, -327677, 7, 0, -327676, 7, 1, -327675, 7, 2, -327674, 10, 0, -327673, 3, 0, -327672, 3, 0, -327671, 3, 0, -327670, 3, 0, -327669, 3, 0, -327668, 3, 0, -327667, 3, 0, -327666, 3, 0, -327665, 3, 0, -196634, 3, 0, -196633, 3, 0, -196632, 3, 0, -196615, 0, 0, -196614, 0, 1, -196613, 0, 1, -196612, 0, 1, -196611, 0, 1, -196610, 0, 1, -196609, 0, 1, -262144, 0, 1, -262143, 0, 1, -262142, 0, 1, -262141, 0, 1, -262140, 0, 1, -262139, 0, 1, -262138, 0, 2, -262137, 3, 0, -262136, 3, 0, -262135, 3, 0, -262134, 3, 0, -262133, 3, 0, -262132, 3, 0, -262131, 3, 0, -262130, 3, 0, -262129, 3, 0, -131098, 3, 0, -131097, 3, 0, -131096, 3, 0, -131079, 0, 65536, -131078, 0, 65537, -131077, 0, 65537, -131076, 0, 65537, -131075, 0, 65537, -131074, 0, 65537, -131073, 0, 65537, -196608, 0, 65537, -196607, 0, 65537, -196606, 0, 65537, -196605, 0, 65537, -196604, 0, 65537, -196603, 0, 65537, -196602, 0, 65538, -196601, 14, 0, -196600, 14, 0, -196599, 14, 0, -196598, 14, 0, -196597, 14, 0, -196596, 14, 0, -196595, 3, 0, -196594, 3, 0, -196593, 3, 0, -65562, 3, 0, -65561, 3, 0, -65560, 3, 0, -65543, 0, 65536, -65542, 0, 65537, -65541, 0, 65537, -65540, 0, 65537, -65539, 0, 65537, -65538, 0, 65537, -65537, 0, 65537, -131072, 0, 65537, -131071, 0, 65537, -131070, 0, 65537, -131069, 0, 65537, -131068, 0, 65537, -131067, 0, 65537, -131066, 0, 65538, -131065, 14, 0, -131064, 16, 0, -131063, 16, 0, -131062, 16, 0, -131061, 16, 0, -131060, 14, 0, -131059, 3, 0, -131058, 3, 0, -131057, 3, 0, -26, 3, 0, -25, 3, 0, -24, 3, 0, -7, 0, 65536, -6, 0, 65537, -5, 0, 65537, -4, 0, 65537, -3, 0, 65537, -2, 0, 65537, -1, 0, 65537, -65536, 0, 65537, -65535, 0, 65537, -65534, 0, 65537, -65533, 0, 65537, -65532, 0, 65537, -65531, 0, 65537, -65530, 0, 65538, -65529, 14, 0, -65528, 16, 0, -65527, 16, 0, -65526, 16, 0, -65525, 16, 0, -65524, 14, 0, -65523, 3, 0, -65522, 3, 0, -65521, 3, 0, 65510, 3, 0, 65511, 3, 0, 65512, 3, 0, 65513, 3, 0, 65514, 3, 0, 65515, 3, 0, 65516, 3, 0, 65517, 3, 0, 65518, 3, 0, 65519, 3, 0, 65520, 3, 0, 65521, 3, 0, 65522, 3, 0, 65523, 3, 0, 65524, 3, 0, 65525, 3, 0, 65526, 3, 0, 65527, 3, 0, 65528, 3, 0, 65529, 0, 65536, 65530, 0, 65537, 65531, 0, 65537, 65532, 0, 65537, 65533, 0, 65537, 65534, 0, 65537, 65535, 0, 65537, 0, 0, 65537, 1, 0, 65537, 2, 0, 65537, 3, 0, 65537, 4, 0, 65537, 5, 0, 65537, 6, 0, 65538, 7, 14, 0, 8, 16, 0, 9, 16, 0, 10, 16, 0, 11, 16, 0, 12, 14, 0, 13, 3, 0, 14, 3, 0, 15, 3, 0, 131046, 3, 0, 131047, 3, 0, 131048, 3, 0, 131049, 3, 0, 131050, 3, 0, 131051, 3, 0, 131052, 3, 0, 131053, 3, 0, 131054, 3, 0, 131055, 3, 0, 131056, 3, 0, 131057, 3, 0, 131058, 3, 0, 131059, 3, 0, 131060, 3, 0, 131061, 3, 0, 131062, 3, 0, 131063, 3, 0, 131064, 3, 0, 131065, 0, 65536, 131066, 0, 65537, 131067, 0, 65537, 131068, 0, 65537, 131069, 0, 65537, 131070, 0, 65537, 131071, 0, 65537, 65536, 0, 65537, 65537, 0, 65537, 65538, 0, 65537, 65539, 0, 65537, 65540, 0, 65537, 65541, 0, 65537, 65542, 0, 65538, 65543, 14, 0, 65544, 16, 0, 65545, 16, 0, 65546, 16, 0, 65547, 16, 0, 65548, 14, 0, 65549, 3, 0, 65550, 3, 0, 65551, 3, 0, 196582, 3, 0, 196583, 3, 0, 196584, 3, 0, 196585, 3, 0, 196586, 3, 0, 196587, 3, 0, 196588, 3, 0, 196589, 3, 0, 196590, 3, 0, 196591, 3, 0, 196592, 3, 0, 196593, 3, 0, 196594, 3, 0, 196595, 3, 0, 196596, 3, 0, 196597, 3, 0, 196598, 3, 0, 196599, 3, 0, 196600, 3, 0, 196601, 0, 65536, 196602, 0, 65537, 196603, 0, 65537, 196604, 0, 65537, 196605, 0, 65537, 196606, 0, 65537, 196607, 0, 65537, 131072, 0, 65537, 131073, 0, 65537, 131074, 0, 65537, 131075, 0, 65537, 131076, 0, 65537, 131077, 0, 65537, 131078, 0, 65538, 131079, 14, 0, 131080, 14, 0, 131081, 14, 0, 131082, 14, 0, 131083, 14, 0, 131084, 14, 0, 131085, 3, 0, 131086, 3, 0, 131087, 3, 0, 262131, 3, 0, 262132, 3, 0, 262133, 3, 0, 262134, 3, 0, 262135, 3, 0, 262136, 3, 0, 262137, 0, 131072, 262138, 0, 131073, 262139, 0, 65537, 262140, 0, 65537, 262141, 0, 65537, 262142, 0, 131073, 262143, 0, 131073, 196608, 0, 131073, 196609, 0, 131073, 196610, 0, 131073, 196611, 0, 131073, 196612, 0, 131073, 196613, 0, 131073, 196614, 0, 131074, 196615, 3, 0, 196616, 3, 0, 196617, 3, 0, 196618, 3, 0, 196619, 3, 0, 196620, 3, 0, 196621, 3, 0, 196622, 3, 0, 196623, 3, 0, 327668, 3, 0, 327669, 3, 0, 327670, 3, 0, 327671, 3, 0, 327672, 3, 0, 327673, 2, 0, 327674, 2, 0, 327675, 0, 65536, 327676, 0, 65537, 327677, 0, 65538, 327678, 2, 0, 327679, 2, 0, 262144, 3, 0, 262145, 3, 0, 262146, 3, 0, 262147, 3, 0, 262148, 3, 0, 262149, 3, 0, 262150, 3, 0, 262151, 3, 0, 262152, 3, 0, 262153, 3, 0, 262154, 3, 0, 262155, 3, 0, 262156, 3, 0, 262157, 3, 0, 262158, 3, 0, 262159, 3, 0, 393204, 3, 0, 393205, 3, 0, 393206, 3, 0, 393207, 0, 0, 393208, 0, 1, 393209, 0, 1, 393210, 0, 1, 393211, 0, 65537, 393212, 0, 131073, 393213, 0, 65537, 393214, 0, 1, 393215, 0, 1, 327680, 0, 1, 327681, 0, 2, 327682, 3, 0, 327683, 3, 0, 327684, 3, 0, 327685, 3, 0, 327686, 3, 0, 327687, 3, 0, 327688, 3, 0, 327689, 3, 0, 327690, 3, 0, 327691, 3, 0, 327692, 3, 0, 327693, 3, 0, 327694, 3, 0, 327695, 3, 0, 458740, 3, 0, 458741, 3, 0, 458742, 3, 0, 458743, 0, 65536, 458744, 0, 65537, 458745, 0, 131073, 458746, 0, 65537, 458747, 0, 65538, 458748, 2, 0, 458749, 0, 65536, 458750, 0, 65537, 458751, 0, 131073, 393216, 0, 65537, 393217, 0, 65538, 393218, 3, 0, 393219, 3, 0, 393220, 3, 0, 393221, 3, 0, 393222, 3, 0, 393223, 3, 0, 393224, 3, 0, 393225, 3, 0, 524276, 3, 0, 524277, 3, 0, 524278, 3, 0, 524279, 0, 65536, 524280, 0, 65538, 524281, 2, 0, 524282, 0, 65536, 524283, 0, 65537, 524284, 0, 1, 524285, 0, 65537, 524286, 0, 65538, 524287, 2, 0, 458752, 0, 65536, 458753, 0, 65538, 458754, 3, 0, 458755, 3, 0, 458756, 3, 0, 458757, 3, 0, 589812, 3, 0, 589813, 3, 0, 589814, 3, 0, 589815, 0, 65536, 589816, 0, 65537, 589817, 0, 1, 589818, 0, 65537, 589819, 0, 65537, 589820, 0, 65537, 589821, 0, 65537, 589822, 0, 65537, 589823, 0, 1, 524288, 0, 65537, 524289, 0, 65538, 524290, 3, 0, 524291, 3, 0, 524292, 3, 0, 524293, 3, 0, 655348, 3, 0, 655349, 3, 0, 655350, 3, 0, 655351, 0, 131072, 655352, 0, 131073, 655353, 0, 131073, 655354, 0, 131073, 655355, 0, 131073, 655356, 0, 131073, 655357, 0, 131073, 655358, 0, 131073, 655359, 0, 131073, 589824, 0, 131073, 589825, 0, 131074, 589826, 3, 0, 589827, 3, 0, 589828, 3, 0, 589829, 3, 0, 720884, 3, 0, 720885, 3, 0, 720886, 3, 0, 720887, 3, 0, 720888, 3, 0, 720889, 3, 0, 720890, 3, 0, 720891, 3, 0, 720892, 3, 0, 720893, 3, 0, 720894, 3, 0, 720895, 3, 0, 655360, 3, 0, 655361, 3, 0, 655362, 3, 0, 655363, 3, 0, 655364, 3, 0, 655365, 3, 0, 786420, 3, 0, 786421, 3, 0, 786422, 3, 0, 786423, 3, 0, 786424, 3, 0, 786425, 3, 0, 786426, 3, 0, 786427, 3, 0, 786428, 3, 0, 786429, 3, 0, 786430, 3, 0, 786431, 3, 0, 720896, 3, 0, 720897, 3, 0, 720898, 3, 0, 720899, 3, 0, 720900, 3, 0, 720901, 3, 0, 851956, 3, 0, 851957, 3, 0, 851958, 3, 0, 851959, 3, 0, 851960, 3, 0, 851961, 3, 0, 851962, 3, 0, 851963, 3, 0, 851964, 3, 0, 851965, 3, 0, 851966, 3, 0, 851967, 3, 0, 786432, 3, 0, 786433, 3, 0, 786434, 3, 0, 786435, 3, 0, 786436, 3, 0, 786437, 3, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Portals" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Train Station" type="Node2D" parent="Portals"]
position = Vector2( 0, -576 )
__meta__ = {
"_edit_group_": true
}

[node name="Teleport" parent="Portals/Train Station" instance=ExtResource( 3 )]
scale = Vector2( 3.5, 1.5 )
destination = "Coming Soon"

[node name="Football" type="Node2D" parent="Portals"]
position = Vector2( -960, -288 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Portals/Football"]
rotation = 1.5708
scale = Vector2( 4, 4 )
texture = ExtResource( 7 )

[node name="Teleport" parent="Portals/Football" instance=ExtResource( 3 )]
scale = Vector2( 7.5, 4 )
destination = "Football"

[node name="Parkour" type="Node2D" parent="Portals"]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Teleport" parent="Portals/Parkour" instance=ExtResource( 3 )]
position = Vector2( -224, 488 )
scale = Vector2( 5, 2 )
destination = "Parkour"

[node name="Kick-off" type="Node2D" parent="Portals"]
position = Vector2( 640, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Teleport" parent="Portals/Kick-off" instance=ExtResource( 3 )]
scale = Vector2( 2.5, 2.5 )
destination = "Kick-off"

[node name="Player" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Ball" parent="." instance=ExtResource( 4 )]
position = Vector2( 216, 80 )

[node name="Ball2" parent="." instance=ExtResource( 4 )]
position = Vector2( -288, 88 )

[node name="Ball3" parent="." instance=ExtResource( 4 )]
position = Vector2( -40, -128 )

[node name="Menu" type="CanvasLayer" parent="."]

[node name="Settings" type="HBoxContainer" parent="Menu"]
anchor_right = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -7.99994
margin_bottom = 72.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="HBoxContainer" parent="Menu/Settings"]
margin_bottom = 64.0
custom_constants/separation = 8

[node name="Add Button" type="Button" parent="Menu/Settings"]
margin_left = 8.0
margin_right = 40.0
margin_bottom = 64.0
rect_min_size = Vector2( 32, 0 )
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 12 )
custom_styles/normal = ExtResource( 10 )
text = "+"

[node name="Join Local" type="Button" parent="Menu/Settings"]
margin_left = 48.0
margin_right = 102.0
margin_bottom = 64.0
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Create Local" type="Button" parent="Menu/Settings"]
visible = false
margin_left = 110.0
margin_right = 186.0
margin_bottom = 64.0
text = "Create"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="Menu"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = -56.0
margin_right = 112.0
margin_bottom = -24.0
custom_fonts/font = ExtResource( 5 )
text = "Version"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Label" parent="Menu"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -224.0
margin_top = -56.0
margin_right = -23.0
margin_bottom = -24.0
custom_fonts/font = ExtResource( 5 )
text = "Made by Finn Pickart"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Voting" type="Label" parent="Menu"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -88.0
margin_bottom = -31.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Control" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Title" type="RichTextLabel" parent="Menu/Menu"]
anchor_right = 1.0
margin_top = 24.0
margin_bottom = 128.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center][color=#f6757a]F[/color][color=#68386c]I[/color][color=#63c74d]E[/color][color=#fee761]S[/color][color=#ff0044]T[/color][color=#2ce8f5]A[/color][/center]"
text = "FIESTA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="Menu/Menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -88.0
margin_top = -160.0
margin_right = 91.0
margin_bottom = -87.0
focus_mode = 0
custom_colors/font_color = Color( 0.619608, 0.156863, 0.207843, 1 )
custom_colors/font_color_hover = Color( 0.619608, 0.156863, 0.207843, 1 )
custom_colors/font_color_pressed = Color( 0.619608, 0.156863, 0.207843, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 12 )
custom_styles/normal = ExtResource( 10 )
enabled_focus_mode = 0
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="Menu/Settings/Add Button" to="." method="_on_Add_Button_button_down"]
[connection signal="button_down" from="Menu/Settings/Join Local" to="." method="_on_Join_Local_button_down"]
[connection signal="button_down" from="Menu/Settings/Create Local" to="." method="_on_Create_Local_button_down"]
[connection signal="button_down" from="Menu/Menu/Play" to="." method="_on_Play_button_down"]
